;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
; Copyright (C) 2020-2021 Nicolas Chataing. All rights reserved. ;
;                                                                ;
; This software may be modified and distributed under the terms  ;
; of the BSD license.  See the LICENSE file for details.         ;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(executable
 (name cmd)
 (modes byte native)
 (libraries compiler-libs.common cmdliner))
